# Z3_neural_network

./: .gitignore  CONSCIENCE_PRODUCTION.md  INFRA_WIRING.md  LICENSE  README.md  Z3_NOVELTY_GATE_FIX_NOTES.md  Z3_neural_dynamics.py  cern_stream.py  conscience.py  corpus_neural_ingestor.py  curriculum_stream.py  infra_adapters.py  interface.html  language_stream.py  main.py  pyproject.toml  railway.json  requirements.txt  resonant_memory.py  response_adapter.py  runtime_loop.py  state_store.py  test_acoustic_encoder.py  test_acoustic_loop.py  test_articulatory_synth.py  test_conscience.py  test_corpus_neural_ingestor.py  test_curriculum_ingestion.py  test_language_corpus_ingestion.py  test_language_decoder.py  test_response_adapter.py  test_z3_neural_dynamics.py  validate_api.py  z3_acoustic_encoder.py  z3_articulatory_synth.py  z3_audio_synth.py  z3_language_decoder.py  z3_language_training.py
config/: conscience_policy.json
docs/: acoustic_encoder_design.md  language_decoder_design.md
