[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "z3-neural-network"
version = "0.1.0"
description = "Standalone Z3 / Z-prime neural dynamics runtime with a minimal Railway API membrane."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "numpy>=1.24",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
]

[tool.setuptools]
py-modules = ["Z3_neural_dynamics", "main", "world_model", "resonant_memory", "response_adapter", "state_store", "runtime_loop", "language_stream", "curriculum_stream", "corpus_neural_ingestor", "z3_language_training", "infra_adapters"]
